[package]
name = "chroniq-open"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-files = "0.6.6"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
anyhow = "1.0.98"
uuid = {version ="1.16.0",features =["v4"]}
rand = {version = "0.9.0", features = ["std"] }
log = "0.4.27"
env_logger = "0.11.8"
rolling-file = "0.2.0"
thiserror = "2.0.12"
tokio-tungstenite = "0.26.2"
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15" , features = ["json"] }
futures-util = "0.3.31"
dotenv = "0.15.0"
once_cell = "1.21.3"
solana-client  ="2.2.7"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"